# CastXML-python-distributions

./: .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  CastXMLUrls.cmake  README.md  appveyor.yml  requirements-dev.txt  scikit-ci.yml  setup.cfg  setup.py
.circleci/: config.yml
castxml/: __init__.py
docs/: make_a_release.rst  update_castxml_version.rst
scripts/: update_castxml_version.py
tests/: test_castxml.py  test_distribution.py
